--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js full">
+<html class="no-js">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -10,8 +10,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <style>
             body {
-                padding-top: 10px;
-                padding-bottom: 20px;
+
             }
         </style>
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -21,7 +20,9 @@
     </head>
     <body>
 
-    <div class='fs_opaque'></div>
+      <div id="bg">
+        <img src="img/bg0.jpg" alt="">
+      </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
@@ -31,8 +32,8 @@
         </div>
         <div class='col-md-6 col-md-offset-1 text-left'>
           <h1><span class='text-blue text-thin'>July 20 2015</span></h1>
-          <p><span class='text-regular text-large'>A <span class='text-green'>festival</span> in <span class='text-gold'>Portland Oregon USA</span></span></p>
-          <p><span class='text-sm text-light'>Celebrating the intersection of arts and technology with a day of speakers, hands-on workshops, and an interactive art gallery showcasing the best in new media art and design.</span></p>
+          <p><span class='text-regular text-large'>A <span class='text-green'>festival</span> in <span class='text-gold'>Portland Oregon</span></span></p>
+          <p><span class='text-sm text-light'>Code Art Festival brings together those at the intersection of art and technology with a day of speakers, hands-on workshops, and an exhibition of interactive art showcasing cutting edge art and design in new media.</span></p>
         </div>
       </div>
     </div>
@@ -40,72 +41,121 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
-          <h2 class='text-blue'>CODE</h2>
-          <p><span class='text-light'>Code helps push the possibilities of our creativity.</span></p>
-          <p><span class='text-light'>We are language and platform agnostic.  From embedded devices to high performance interactive installations, all levels of technology are showcased.</span></p>
-          <p><span class='text-light'> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
 
-       </div>
-       <div class="col-md-4">
-         <h2 class='text-green'>ART</h2>
-         <p><span class='text-light'>Art enables something something.</span></p>
-         <p><span class='text-light'> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></p>
-         <p><span class='text-light'> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
 
-      </div>
-      <div class="col-md-4">
-        <h2 class='text-gold'>FESTIVAL</h2>
-        <p><span class='text-light'>Community fosters growth.</span></p>
-        <p><span class='text-light'>Gathering some of the hardest working and brightest minds in the field.  Fostering equality and opportunity to build on all of our strengths.</span></p>
-     </div>
+          <div class="col-md-4 text-center">
+            <div class='text-vlarge text-blue text-regular'>CODE</div><div class='text-light'> enables our creativity.</div>
+          </div>
 
-     <div class='col-md-12'><hr></div>
+          <div class="col-md-4 text-center">
+            <div class='text-vlarge text-green text-regular'>ART</div><div class='text-light'> enables our humanity.</div>
+          </div>
+
+          <div class="col-md-4 text-center">
+            <div class='text-vlarge text-gold text-regular'>FESTIVAL</div><div class='text-light'> enables our coummnity.</div>
+          </div>
+
+
+      <div class='col-md-12'><hr class='col-md-offset-2 col-md-8'></div>
 
      <div class="col-md-12">
-       <h2 class='text-blue'>SPEAKERS</h2>
-       <div class="col-md-4">
+       <div class='text-center'>
+         <h1 class='text-blue'>SPEAKERS</h1>
+       </div>
+
+       <div class="col-md-4 outlined">
          <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
          <h2 class='text-gold'>Jane Doe</h2>
          <p><span class='text-light'>Interactive Artist</span></p>
          <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 outlined">
         <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
         <h2 class='text-gold'>John Doe</h2>
         <p><span class='text-light'>Designer</span></p>
         <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 outlined">
        <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
        <h2 class='text-gold'>Alie Doe</h2>
        <p><span class='text-light'>Community organizer</span></p>
        <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 outlined">
        <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
        <h2 class='text-gold'>Mitch Doe</h2>
        <p><span class='text-light'>Interactive Artist</span></p>
        <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 outlined">
         <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
         <h2 class='text-gold'>Name Surname</h2>
         <p><span class='text-light'>Designer</span></p>
         <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 outlined">
        <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
        <h2 class='text-gold'>For Doe</h2>
        <p><span class='text-light'>Community organizer</span></p>
        <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
      </div>
+
+     <div class="col-md-4 outlined">
+       <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
+       <h2 class='text-gold'>Jane Doe</h2>
+       <p><span class='text-light'>Interactive Artist</span></p>
+       <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
+    </div>
+    <div class="col-md-4 outlined">
+      <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
+      <h2 class='text-gold'>John Doe</h2>
+      <p><span class='text-light'>Designer</span></p>
+      <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
+    </div>
+    <div class="col-md-4 outlined">
+     <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
+     <h2 class='text-gold'>Alie Doe</h2>
+     <p><span class='text-light'>Community organizer</span></p>
+     <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
+    </div>
+    <div class="col-md-4 outlined">
+     <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
+     <h2 class='text-gold'>Mitch Doe</h2>
+     <p><span class='text-light'>Interactive Artist</span></p>
+     <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
+    </div>
+    <div class="col-md-4 outlined">
+      <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
+      <h2 class='text-gold'>Name Surname</h2>
+      <p><span class='text-light'>Designer</span></p>
+      <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
+    </div>
+    <div class="col-md-4 outlined">
+     <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
+     <h2 class='text-gold'>For Doe</h2>
+     <p><span class='text-light'>Community organizer</span></p>
+     <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
+   </div>
+
    </div>
 
    <div class='col-md-12'><hr></div>
 
+   <div class='col-md-12 text-center'>
+     <div class='text-center'>
+       <h1 class='text-green'>TICKETS</h1>
+     </div>
+     <div class='col-md-6'><a href='http://eepurl.com/bcS0sf'><button type='button' class='btn text-white' style='background-color: rgb(29,53,127);'>our mailing list</button></a></div>
+     <div  class='col-md-6'><a href='http://twitter.com/codeartfestival'><button type='button' class='btn text-white' style='background-color: rgb(29,53,127);'>our twitter</button></a></div>
+  </div>
+
+   <div class='col-md-12'><hr></div>
+
    <div class="col-md-12">
-     <h2 class='text-gold'>SPONSORS</h2>
+     <div class='text-center'>
+       <h1 class='text-gold'>SPONSORS</h1>
+     </div>
+
      <div class="col-md-4">
       <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
      </div>
@@ -124,7 +174,7 @@
      <div class="col-md-4">
       <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
      </div>
-     
+
    </div>
 
 
