--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <div class='col-md-3'>
-          <h1>CODE ART FESTIVAL</h1>
+        <div class='col-md-3 text-center'>
+          <h1>CODE ART FESTIVAL</h1><span class='text-light'>•• preview site ••</span>
         </div>
         <div class='col-md-6 col-md-offset-1 text-left'>
-          <h1><span class='text-blue text-thin'>July 25 2015</span></h1>
-          <p><span class='text-regular text-large'>A <span class='text-green'>festival</span> in <span class='text-gold'>Portland Oregon</span></span></p>
-          <p><span class='text-sm text-light'>Code Art Festival brings together those at the intersection of art and technology with a day of speakers, hands-on workshops, and an exhibition of interactive art showcasing cutting edge art and design in new media.</span></p>
+          <h1><span class='text-blue text-thin'>JULY 25 2015</span></h1>
+          <p><span class='text-regular text-large'>A <span class='text-gold'>FESTIVAL</span> IN <span class='text-green'>PORTLAND OREGON</span></span></p>
+          <p><span class='text-sm text-light'>Code Art Festival brings together those at the intersection of art and technology with a day of speakers, hands-on workshops, and an exhibition of interactive art showcasing the cutting edge in technology, design, and new media.</span></p>
         </div>
       </div>
     </div>
@@ -44,15 +44,15 @@
 
 
           <div class="col-md-4 text-center">
-            <div class='text-vlarge text-blue text-regular'>CODE</div><div class='text-light'> enables our creativity.</div>
+            <div class='text-vlarge text-blue text-regular'>CODE</div><div class='text-light'> enables our creativity</div>
           </div>
 
           <div class="col-md-4 text-center">
-            <div class='text-vlarge text-green text-regular'>ART</div><div class='text-light'> enables our humanity.</div>
+            <div class='text-vlarge text-gold text-regular'>ART</div><div class='text-light'> enables our humanity</div>
           </div>
 
           <div class="col-md-4 text-center">
-            <div class='text-vlarge text-gold text-regular'>FESTIVAL</div><div class='text-light'> enables our coummnity.</div>
+            <div class='text-vlarge text-green text-regular'>FESTIVAL</div><div class='text-light'> enables our coummnity</div>
           </div>
 
 
