--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class='col-md-3 text-center'>
           <h1>CODE ART FESTIVAL</h1><span class='text-light'>•• preview site ••</span>
         </div>
-        <div class='col-md-6 col-md-offset-1 text-left'>
-          <h1><span class='text-blue text-thin'>JULY 25 2015</span></h1>
+        <div class='col-md-6 col-md-offset-1 text-center'>
           <p><span class='text-regular text-large'>A <span class='text-gold'>FESTIVAL</span> IN <span class='text-green'>PORTLAND OREGON</span></span></p>
+          <h1><span class='text-blue text-thin'>JULY 25 2015</span></h1>          
           <p><span class='text-sm text-light'>Code Art Festival brings together those at the intersection of art and technology with a day of speakers, hands-on workshops, and an exhibition of interactive art showcasing the cutting edge in technology, design, and new media.</span></p>
         </div>
       </div>
