--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class='col-md-6 col-md-offset-1 text-center'>
           <p><span class='text-regular text-large'>A <span class='text-gold'>FESTIVAL</span> IN <span class='text-green'>PORTLAND OREGON</span></span></p>
-          <h1><span class='text-blue text-thin'>JULY 25 2015</span></h1>          
+          <h1><span class='text-blue text-thin'>JULY 25 2015</span></h1>
           <p><span class='text-sm text-light'>Code Art Festival brings together those at the intersection of art and technology with a day of speakers, hands-on workshops, and an exhibition of interactive art showcasing the cutting edge in technology, design, and new media.</span></p>
         </div>
       </div>
@@ -180,16 +180,22 @@
 
    </div>
 
-      <hr>
-
-      <footer>
-        <p>&copy; pdx_cc 2015</p>
-      </footer>
-    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    </div> <!-- /container -->
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
 
         <script src="js/main.js"></script>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-53822118-3', 'auto');
+          ga('send', 'pageview');
+
+        </script>
     </body>
 </html>
