--- a/index.html
+++ b/index.html
@@ -83,57 +83,57 @@
       </div>
       <div class="col-md-4 outlined">
        <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-       <h2 class='text-gold'>Mitch Doe</h2>
-       <p><span class='text-light'>Interactive Artist</span></p>
+       <h2 class='text-gold'>Hella Doe</h2>
+       <p><span class='text-light'>Software Engineer</span></p>
        <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
       <div class="col-md-4 outlined">
         <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-        <h2 class='text-gold'>Name Surname</h2>
-        <p><span class='text-light'>Designer</span></p>
+        <h2 class='text-gold'>Get Doe</h2>
+        <p><span class='text-light'>Painter</span></p>
         <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
       <div class="col-md-4 outlined">
        <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-       <h2 class='text-gold'>For Doe</h2>
-       <p><span class='text-light'>Community organizer</span></p>
+       <h2 class='text-gold'>Foreal Doe</h2>
+       <p><span class='text-light'>Engineer</span></p>
        <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
      </div>
 
      <div class="col-md-4 outlined">
        <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-       <h2 class='text-gold'>Jane Doe</h2>
-       <p><span class='text-light'>Interactive Artist</span></p>
+       <h2 class='text-gold'>Jelly Doe</h2>
+       <p><span class='text-light'>A fish</span></p>
        <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
     </div>
     <div class="col-md-4 outlined">
       <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-      <h2 class='text-gold'>John Doe</h2>
-      <p><span class='text-light'>Designer</span></p>
+      <h2 class='text-gold'>Toe Doe</h2>
+      <p><span class='text-light'>Dancer and Artist</span></p>
       <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
     </div>
     <div class="col-md-4 outlined">
      <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-     <h2 class='text-gold'>Alie Doe</h2>
-     <p><span class='text-light'>Community organizer</span></p>
+     <h2 class='text-gold'>Doe Doe</h2>
+     <p><span class='text-light'>Artist</span></p>
      <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
     </div>
     <div class="col-md-4 outlined">
      <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-     <h2 class='text-gold'>Mitch Doe</h2>
-     <p><span class='text-light'>Interactive Artist</span></p>
+     <h2 class='text-gold'>Which Doe</h2>
+     <p><span class='text-light'>Witch</span></p>
      <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
     </div>
     <div class="col-md-4 outlined">
       <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-      <h2 class='text-gold'>Name Surname</h2>
-      <p><span class='text-light'>Designer</span></p>
+      <h2 class='text-gold'>Butf'real Doe</h2>
+      <p><span class='text-light'>Writer</span></p>
       <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
     </div>
     <div class="col-md-4 outlined">
      <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-     <h2 class='text-gold'>For Doe</h2>
-     <p><span class='text-light'>Community organizer</span></p>
+     <h2 class='text-gold'>Jim Doe</h2>
+     <p><span class='text-light'>Technical Director</span></p>
      <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
    </div>
 
