--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
     <div class="col-md-4 outlined">
      <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-     <h2 class='text-gold'>Jim Doe</h2>
+     <h2 class='text-gold'>Fro Doe</h2>
      <p><span class='text-light'>Technical Director</span></p>
      <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
    </div>
