--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
     <body>
 
       <div id="bg">
-        <img src="img/bg0.jpg" alt="">
+        <img src="img/bg1.jpg" alt="">
       </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
         <div class='col-md-3 text-center'>
-          <h1>CODE ART FESTIVAL</h1><span class='text-light'>•• preview site ••</span>
+          <!-- <h1>CODE ART FESTIVAL</h1> -->
+          <img src='img/logo_box.png' class='img-responsive'>
         </div>
-        <div class='col-md-6 col-md-offset-1 text-center'>
-          <p><span class='text-regular text-large'>A <span class='text-gold'>FESTIVAL</span> IN <span class='text-green'>PORTLAND OREGON</span></span></p>
-          <h1><span class='text-blue text-thin'>JULY 25 2015</span></h1>
-          <p><span class='text-sm text-light'>Code Art Festival brings together those at the intersection of art and technology with a day of speakers, hands-on workshops, and an exhibition of interactive art showcasing the cutting edge in technology, design, and new media.</span></p>
+        <div class='col-md-6 col-md-offset-1 text-justify'>
+          <p><span class='text-regular text-large'>A <span class='color-gold'>FESTIVAL</span> IN <span class='color-green'>PORTLAND OREGON</span></span></p>
+          <h1><span class='color-blue text-thin'>JULY 25 2015</span></h1>
+          <p><span class='text-sm text-regular'>Code Art Festival brings together those at the intersection of art and technology with a day of speakers, hands-on workshops, and an exhibition of interactive art showcasing the cutting edge in technology, design, and new media.</span></p>
         </div>
       </div>
     </div>
@@ -41,98 +42,94 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
-
-
           <div class="col-md-4 text-center">
-            <div class='text-vlarge text-blue text-regular'>CODE</div><div class='text-light'> enables our creativity</div>
+            <div class='text-vlarge color-blue text-regular'>CODE</div><div class='text-light'> enables our creativity</div>
           </div>
 
           <div class="col-md-4 text-center">
-            <div class='text-vlarge text-gold text-regular'>ART</div><div class='text-light'> enables our humanity</div>
+            <div class='text-vlarge color-gold text-regular'>ART</div><div class='text-light'> enables our humanity</div>
           </div>
 
           <div class="col-md-4 text-center">
-            <div class='text-vlarge text-green text-regular'>FESTIVAL</div><div class='text-light'> enables our coummnity</div>
+            <div class='text-vlarge color-green text-regular'>FESTIVAL</div><div class='text-light'> enables our coummnity</div>
           </div>
-
-
       <div class='col-md-12'><hr class='col-md-offset-2 col-md-8'></div>
 
      <div class="col-md-12">
        <div class='text-center'>
-         <h1 class='text-blue'>SPEAKERS</h1>
+         <h1 class='color-blue'>SPEAKERS</h1>
        </div>
 
        <div class="col-md-4 outlined">
          <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-         <h2 class='text-gold'>Jane Doe</h2>
+         <h2 class='color-gold'>Jane Doe</h2>
          <p><span class='text-light'>Interactive Artist</span></p>
          <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
       <div class="col-md-4 outlined">
         <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-        <h2 class='text-gold'>John Doe</h2>
+        <h2 class='color-gold'>John Doe</h2>
         <p><span class='text-light'>Designer</span></p>
         <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
       <div class="col-md-4 outlined">
        <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-       <h2 class='text-gold'>Alie Doe</h2>
+       <h2 class='color-gold'>Alie Doe</h2>
        <p><span class='text-light'>Community organizer</span></p>
        <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
       <div class="col-md-4 outlined">
        <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-       <h2 class='text-gold'>Hella Doe</h2>
+       <h2 class='color-gold'>Hella Doe</h2>
        <p><span class='text-light'>Software Engineer</span></p>
        <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
       <div class="col-md-4 outlined">
         <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-        <h2 class='text-gold'>Get Doe</h2>
+        <h2 class='color-gold'>Get Doe</h2>
         <p><span class='text-light'>Painter</span></p>
         <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
       </div>
       <div class="col-md-4 outlined">
        <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-       <h2 class='text-gold'>Foreal Doe</h2>
+       <h2 class='color-gold'>Foreal Doe</h2>
        <p><span class='text-light'>Engineer</span></p>
        <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
      </div>
 
      <div class="col-md-4 outlined">
        <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-       <h2 class='text-gold'>Jelly Doe</h2>
+       <h2 class='color-gold'>Jelly Doe</h2>
        <p><span class='text-light'>A fish</span></p>
        <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
     </div>
     <div class="col-md-4 outlined">
       <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-      <h2 class='text-gold'>Toe Doe</h2>
+      <h2 class='color-gold'>Toe Doe</h2>
       <p><span class='text-light'>Dancer and Artist</span></p>
       <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
     </div>
     <div class="col-md-4 outlined">
      <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-     <h2 class='text-gold'>Doe Doe</h2>
+     <h2 class='color-gold'>Doe Doe</h2>
      <p><span class='text-light'>Artist</span></p>
      <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
     </div>
     <div class="col-md-4 outlined">
      <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-     <h2 class='text-gold'>Which Doe</h2>
+     <h2 class='color-gold'>Which Doe</h2>
      <p><span class='text-light'>Witch</span></p>
      <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
     </div>
     <div class="col-md-4 outlined">
       <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-      <h2 class='text-gold'>Butf'real Doe</h2>
+      <h2 class='color-gold'>Butf'real Doe</h2>
       <p><span class='text-light'>Writer</span></p>
       <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
     </div>
     <div class="col-md-4 outlined">
      <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-     <h2 class='text-gold'>Fro Doe</h2>
+     <h2 class='color-gold'>Fro Doe</h2>
      <p><span class='text-light'>Technical Director</span></p>
      <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
    </div>
@@ -143,7 +140,7 @@
 
    <div class='col-md-12 text-center'>
      <div class='text-center'>
-       <h1 class='text-green'>TICKETS</h1>
+       <h1 class='color-green'>TICKETS</h1>
      </div>
      <div class='col-md-6'><a href='http://eepurl.com/bcS0sf'><button type='button' class='btn text-white' style='background-color: rgb(29,53,127);'>our mailing list</button></a></div>
      <div  class='col-md-6'><a href='http://twitter.com/codeartfestival'><button type='button' class='btn text-white' style='background-color: rgb(29,53,127);'>our twitter</button></a></div>
@@ -153,7 +150,7 @@
 
    <div class="col-md-12">
      <div class='text-center'>
-       <h1 class='text-gold'>SPONSORS</h1>
+       <h1 class='color-gold'>SPONSORS</h1>
      </div>
 
      <div class="col-md-4">
