--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           <!-- <h1>CODE ART FESTIVAL</h1> -->
           <img src='img/logo_box.png' class='img-responsive'>
         </div>
-        <div class='col-md-6 col-md-offset-1 text-justify'>
-          <p><span class='text-regular text-large'>A <span class='color-gold'>FESTIVAL</span> IN <span class='color-green'>PORTLAND OREGON</span></span></p>
-          <h1><span class='color-blue text-thin'>JULY 25 2015</span></h1>
-          <p><span class='text-sm text-regular'>Code Art Festival brings together those at the intersection of art and technology with a day of speakers, hands-on workshops, and an exhibition of interactive art showcasing the cutting edge in technology, design, and new media.</span></p>
+        <div class='col-md-6 col-md-offset-1'>
+          <p class='text-center'><span class='text-regular text-vlarge'>A <span class='color-gold'>FESTIVAL</span> IN <span class='color-green'>PORTLAND OREGON</span></span></p>
+          <p class='text-center'><span class='color-blue text-thin text-vlarge'>JULY 25 2015</span></p>
+          <p class='text-justify'><span class='text-regular'>Code Art Festival brings together those at the intersection of art and technology with a day of speakers, hands-on workshops, and an exhibition of interactive art showcasing the cutting edge in technology, design, and new media.</span></p>
         </div>
       </div>
     </div>
