--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
      <div class="col-md-12">
        <div class='text-center'>
          <h1 class='color-blue'>SPEAKERS</h1>
+         <span class='text-light'>coming soon</span>
        </div>
 
        <div class="col-md-4 outlined">
