--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
      <div class="col-md-12">
        <div class='text-center'>
          <h1 class='color-blue'>SPEAKERS</h1>
-         <span class='text-light'>coming soon</span>
+         <span class='text-light'>first speakers announced on February 18th</span>
        </div>
 
        <div class="col-md-4 outlined">
@@ -141,10 +141,26 @@
 
    <div class='col-md-12 text-center'>
      <div class='text-center'>
-       <h1 class='color-green'>TICKETS</h1>
+       <h1 class='color-green'>THE VENUE</h1>
+     </div>
+     <div class='col-md-6 col-md-offset-3'>
+       <img src='img/Vestas_HQ.jpg' class='img-responsive'>
+     </div>
+     <div class='text-light col-md-6 col-md-offset-3'>
+       1417 NW Everett St • Portland, Oregon 97209
+     </div>
+
+  </div>
+
+  <div class='col-md-12'><hr></div>
+
+   <div class='col-md-12 text-center'>
+     <div class='text-center'>
+       <h1 class='color-blue'>TICKETS</h1>
+       <span class='text-light'>the first round of tickets will be sold in early March</span>
      </div>
      <div class='col-md-6'><a href='http://eepurl.com/bcS0sf'><button type='button' class='btn text-white' style='background-color: rgb(29,53,127);'>our mailing list</button></a></div>
-     <div  class='col-md-6'><a href='http://twitter.com/codeartfestival'><button type='button' class='btn text-white' style='background-color: rgb(29,53,127);'>our twitter</button></a></div>
+     <div class='col-md-6'><a href='http://twitter.com/codeartfestival'><button type='button' class='btn text-white' style='background-color: rgb(29,53,127);'>our twitter</button></a></div>
   </div>
 
    <div class='col-md-12'><hr></div>
@@ -154,7 +170,17 @@
        <h1 class='color-gold'>SPONSORS</h1>
      </div>
 
-     <div class="col-md-4">
+     <div class="col-md-6">
+      <div class='col-md-12'>
+        <img src='img/UA-Logo-1.jpg' class='img-responsive'>
+      </div>
+     </div>
+     <div class="col-md-6">
+       <div class='col-md-12'>
+         <img src='img/evident-io.png' class='img-responsive'>
+       </div>
+     </div>
+     <!-- <div class="col-md-4">
       <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
      </div>
      <div class="col-md-4">
@@ -165,13 +191,7 @@
      </div>
      <div class="col-md-4">
       <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-     </div>
-     <div class="col-md-4">
-      <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-     </div>
-     <div class="col-md-4">
-      <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
-     </div>
+     </div> -->
 
    </div>
 
