--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:title" content="• Code • Art • Festival • ">
+        <meta property="og:site_name" content="Code Art Festival">
+        <meta property="og:description" content="Code Art Festival brings together those at the intersection of art and technology with a day of speakers, hands-on workshops, and an exhibition of interactive art showcasing the cutting edge in technology, design, and new media.">
+        <meta property="og:image" content="http://code-art-festival.com/img/code_art_festival_brand_black.png">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <style>
