--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
      <div class="col-md-12">
        <div class='text-center'>
          <h1 class='color-blue'>SPEAKERS</h1>
-         <span class='text-light'>first speakers announced on February 18th</span>
+         <h1 class='text-light'>first speakers announced on February 18th</h1>
        </div>
 
-       <div class="col-md-4 outlined">
+       <!-- <div class="col-md-4 outlined">
          <div class='col-md-12' style='height: 200px; background-color: rgb(32,32,32); margin-bottom: 10px;'></div>
          <h2 class='color-gold'>Jane Doe</h2>
          <p><span class='text-light'>Interactive Artist</span></p>
@@ -137,7 +137,7 @@
      <h2 class='color-gold'>Fro Doe</h2>
      <p><span class='text-light'>Technical Director</span></p>
      <p><span class='text-light'>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</span></p>
-   </div>
+   </div> -->
 
    </div>
 
