--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
      <div class="col-md-12">
        <div class='text-center'>
          <h1 class='color-blue'>SPEAKERS</h1>
-         <h1 class='text-light'>first speakers announced on February 18th</h1>
+         <h4 class='text-light'>first speakers announced • February 18 •</h4>
        </div>
 
        <!-- <div class="col-md-4 outlined">
@@ -145,23 +145,47 @@
 
    <div class='col-md-12 text-center'>
      <div class='text-center'>
-       <h1 class='color-green'>THE VENUE</h1>
+       <h1 class='color-gold'>THE EXHIBITION</h1>
+       <h4 class='text-light'>details coming • APRIL 22 •</h4>
      </div>
-     <div class='col-md-6 col-md-offset-3'>
-       <img src='img/Vestas_HQ.jpg' class='img-responsive'>
+
+  </div>
+
+   <div class='col-md-12'><hr></div>
+
+   <div class='col-md-12 text-center'>
+     <div class='text-center'>
+       <h1 class='color-green'>THE VENUE</h1>
      </div>
      <div class='text-light col-md-6 col-md-offset-3'>
        1417 NW Everett St • Portland, Oregon 97209
+     </div>
+     <div class='col-md-4 col-md-offset-1'>
+       <img src='img/Vestas_HQ.jpg' class='img-responsive'>
+     </div>
+     <div class='col-md-6'>
+       <img src='img/Vestas_Interior-02.jpg' class='img-responsive'>
      </div>
 
   </div>
 
   <div class='col-md-12'><hr></div>
 
+  <div class='col-md-6 col-md-offset-3 text-center'>
+    <div class='text-center'>
+      <h1 class='color-blue'>CODE OF CONDUCT</h1>
+      <h4 class='text-light'>Code Art Festival is dedicated to providing a harassment-free conference experience for everyone regardless of gender, sexual orientation, disability, physical appearance, body size, race, or religion.</h4>
+    </div>
+
+ </div>
+
+
+  <div class='col-md-12'><hr></div>
+
    <div class='col-md-12 text-center'>
      <div class='text-center'>
-       <h1 class='color-blue'>TICKETS</h1>
-       <span class='text-light'>the first round of tickets will be sold in early March</span>
+       <h1 class='color-gold'>TICKETS</h1>
+       <h4 class='text-light'>tickets will be on sale in • MARCH •</h4>
      </div>
      <div class='col-md-6'><a href='http://eepurl.com/bcS0sf'><button type='button' class='btn text-white' style='background-color: rgb(29,53,127);'>our mailing list</button></a></div>
      <div class='col-md-6'><a href='http://twitter.com/codeartfestival'><button type='button' class='btn text-white' style='background-color: rgb(29,53,127);'>our twitter</button></a></div>
@@ -171,7 +195,7 @@
 
    <div class="col-md-12">
      <div class='text-center'>
-       <h1 class='color-gold'>SPONSORS</h1>
+       <h1 class='color-green'>SPONSORS</h1>
      </div>
 
      <div class="col-md-6">
@@ -198,7 +222,6 @@
      </div> -->
 
    </div>
-
 
    </div>
 
